# hyper-operating-system

./: .gitignore  README.md  README_pubsub.md  dual_so101_manual.mjcf  dual_so101_scene.mjcf  hello.py  hos_bag.py  hos_topic.py  ik_node.py  mocap_hands.py  pub_node.py  pyproject.toml  start_broker.py  sub_node.py  teleop_main.py  test.py  test_dual_robots.py  test_ik_node.py  tmp.py  urdf_converter.py
SO101/: dual_so101_scene.xml  so101.mjcf  so101.xml  so101_2.xml
docs/: ik_node_usage.md
examples/: test.py
hos_core/: __init__.py  __main__.py  broker.py  launch_base.py  topic.py
hos_teleop/: __main__.py  stereo_calib.py  teleop_main.py
hos_teleop/mocap/: ar_coordinate_transformer.py  hand_tracking.py  ik.py  stereo_tri.py
mocap/: ar_coordinate_transformer.py  hand_tracking.py  ik.py  so101_env.py  stereo_tri.py
