[project]
name = "mocap-multicam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "ikpy>=3.4.2",
    # "mediapipe",
    "mujoco>=3.3.6",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pyzmq>=27.1.0",
    # "pybullet>=3.2.7",
    # "pyopengl>=3.1.10",
    # "pyqt5==5.15.3", # ここのバージョンはpyqtgraphの互換性のために固定
    # "pyqtgraph>=0.13.7",
    # "pyside2>=5.15.2.1",
    "scipy>=1.16.2",
    "setuptools>=80.9.0",
    "tk>=0.1.0",
    "urdf2mjcf>=0.2.39",
    "vispy>=0.15.2",
    "zmq>=0.0.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
